--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name":        "asc",
-	"description": "ASC (pronounced \"ask\"), stands for asynchronous, self-updating, cache. It serves as a middleware layer between a service and a client. The service could be an in-process library, a file, an external web service, anything. Any time the results from a resource call can be cached, you can use ASC as a proxy to that resource.",
-	"version":     "0.0.1",
+	"description": "A middleware layer between a service and a client. The service could be an in-process library, a file, an external web service, anything. Any time the results from a resource call can be cached, you can use ASC as a proxy to that resource.",
+	"version":     "0.0.2",
 	"author":      "Anthony Hildoer <anthony@bluerival.com>",
 	"repository":  {
 		"type": "git",
