- relax node version requirements in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name":        "asc",
 	"description": "A middleware layer between a service and a client. The service could be an in-process library, a file, an external web service, anything. Any time the results from a resource call can be cached, you can use ASC as a proxy to that resource.",
-	"version":     "0.0.2",
+	"version":     "0.0.3",
 	"author":      "Anthony Hildoer <anthony@bluerival.com>",
 	"repository":  {
 		"type": "git",
@@ -13,7 +13,7 @@
 		"ttl cache"
 	],
 	"engines":     {
-		"node": "~0.8"
+		"node": ">=0.6.0"
 	},
 	"license":     "MIT"
 }
