--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
 	"name":            "asc",
 	"description":     "A middleware layer between a service and a client. The service could be an in-process library, a file, an external web service, anything. Any time the results from a resource call can be cached, you can use ASC as a proxy to that resource.",
-	"version":         "0.1.0",
+	"version":         "1.0.0",
 	"author":          "Anthony Hildoer <anthony@bluerival.com>",
 	"repository":      {
 		"type": "git",
 		"url":  "git://github.com/bluerival/asc.git"
 	},
 	"dependencies":    {
-		"async": "~0"
+		"async": "0.9.0"
 	},
 	"devDependencies": {
-		"mocha": "~1.8.0"
+		"mocha": "2.0.1"
 	},
 	"keywords":        [
 		"cache",
@@ -20,7 +20,7 @@
 		"batch lookup"
 	],
 	"engines":         {
-		"node": ">=0.6.0"
+		"node": ">=0.10.33"
 	},
 	"license":         "MIT"
 }
