--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test": "./node_modules/mocha/bin/mocha -b -u bdd --exit test/*.test.js"
   },
   "dependencies": {
-    "async": "3.1.0",
+    "async": "2.6.2",
     "doublescore": "1.0.0"
   },
   "devDependencies": {
     "@types/mocha": "5.2.7",
+    "eslint": "6.1.0",
+    "glob": "7.1.4",
     "mocha": "6.2.0"
   },
   "keywords": [
