--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "asc",
   "description": "A middleware layer between a service and a client. The service could be an in-process library, a file, an external web service, anything. Any time the results from a resource call can be cached, you can use ASC as a proxy to that resource.",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "author": "Anthony Hildoer <anthony@bluerival.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/bluerival/asc.git"
   },
+  "types": "types/index.d.ts",
   "scripts": {
-    "test-watch": "./node_modules/mocha/bin/mocha -b -u bdd -w --exit test/*.test.js",
-    "test": "./node_modules/mocha/bin/mocha -b -u bdd --exit test/*.test.js"
+    "test-watch": "node ./node_modules/mocha/bin/mocha.js -b -u bdd -w --exit test/*.test.js",
+    "test": "node ./node_modules/mocha/bin/mocha.js -b -u bdd --exit test/*.test.js"
   },
   "dependencies": {
-    "async": "3.2.4",
-    "doublescore": "1.0.1"
+    "async": "^3.2.5"
   },
   "devDependencies": {
-    "@types/mocha": "9.1.1",
-    "eslint": "7.32.0",
-    "glob": "8.0.3",
-    "mocha": "9.2.2"
+    "@types/mocha": "^10.0.7",
+    "eslint": "^9.8.0",
+    "glob": "^11.0.0",
+    "mocha": "10.7.0"
   },
   "keywords": [
     "cache",
@@ -30,5 +30,14 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "files": [
+    "index.js",
+    "lib",
+    "LICENSE",
+    "package-lock.json",
+    "package.json",
+    "README.md",
+    "types"
+  ],
   "license": "MIT"
 }
